feat: complete the cart API module
